--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.10.6-alpine
-WORKDIR /usr/src/app
+WORKDIR /usr/src/backend
 COPY . .
 
 RUN pip3 install -vvv --no-cache-dir --user -r requirements.txt
 
 EXPOSE 8080
 
-ENTRYPOINT ["sanic"]
-CMD ["src.backend.odds_server:app"]
+ENTRYPOINT ["python3"]
+CMD ["-m", "sanic", "odds_server:app", "--port=8080"]
