Running in docker

--- a/src/frontend/conf/nginx.conf
+++ b/src/frontend/conf/nginx.conf
@@ -4,6 +4,7 @@ server {
     server_name  localhost;
 
     location / {
+        rewrite  ^/$  /index.html  last;
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
