--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -6,5 +6,5 @@ RUN npm install && npm run build
 EXPOSE 80
 
 FROM nginx:latest
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist/odds-app /usr/share/nginx/html
 COPY --from=build /app/conf/nginx.conf /etc/nginx/conf.d/default.conf
